--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "draft-js": "^0.10.4",
+    "draft-js-export-html": "^1.2.0",
     "draftjs-utils": "^0.8.8",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
